--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app-next",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/alvdelci/app-next.git",
+  "repository": "https://github.com/alvdelci/alvdelci-next.git",
   "author": "alvdelci <delcimariosantos@gmail.com>",
   "license": "MIT",
   "scripts": {
@@ -11,11 +11,15 @@
   "dependencies": {
     "next": "^10.2.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-bootstrap": "^1.6.1",
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
+    "@types/react-bootstrap": "^0.32.25",
+    "@types/styled-components": "^5.1.10",
     "typescript": "^4.3.2"
   }
 }
